syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply){}
  rpc LotsReplies(HelloRequest) returns (stream HelloReply){}
  rpc LotsGreetings(stream HelloRequest) returns (LotsGreetingsResponse){}
  rpc BidiHello(stream HelloRequest) returns (stream HelloReply){}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message LotsGreetingsResponse{
  string evenGreetings = 1;
  string oddGreetings = 2;
}